Kubernetes/ExampleRedis/java-pet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-pet-ingress
spec:
  rules:
  - host: java-pet.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-pet
            port:
              number: 80
